[package]
name = "rime-api"
version = "0.3.0"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A wrapper for librime `rime_api.h`"
repository = "https://github.com/bczhc/librime-rs"
homepage = "https://github.com/bczhc/librime-rs"
documentation = "https://docs.rs/rime-api/latest/rime-api"
categories = ["api-bindings"]

[dependencies]
librime-sys = {path = "./librime-sys", version = "0.4.0"}
