[package]
name = "librime-sys"
version = "0.4.0"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "FFI bindings to librime"
repository = "https://github.com/bczhc/librime-rs"
homepage = "https://github.com/bczhc/librime-rs"
documentation = "https://docs.rs/librime-sys/latest/librime-sys"
keywords = ["ffi"]
categories = ["api-bindings", "external-ffi-bindings"]

[build-dependencies]
bindgen = "0.64.0"
